--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "17.0.1",
     "react-feather": "2.0.9",
     "react-scripts": "4.0.1",
-    "styled-components": "5.2.1"
+    "styled-components": "5.2.1",
+    "@react-buddy/ide-toolbox": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
